# fisa06-streamlit-test

./: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
checkpoints/stock_model/: DLinear_0.ckpt  PatchTST_0.ckpt  alias_to_model.pkl  configuration.pkl  dataset.pkl
lightning_logs/version_0/: events.out.tfevents.1768793702.2-20
lightning_logs/version_1/: events.out.tfevents.1768793737.2-20  hparams.yaml
lightning_logs/version_10/: events.out.tfevents.1768876517.2-20  hparams.yaml
lightning_logs/version_11/: events.out.tfevents.1768876685.2-20
lightning_logs/version_12/: events.out.tfevents.1768895980.2-20
lightning_logs/version_13/: events.out.tfevents.1768896162.2-20
lightning_logs/version_14/: events.out.tfevents.1768954185.2-20  hparams.yaml
lightning_logs/version_15/: events.out.tfevents.1768954380.2-20
lightning_logs/version_16/: events.out.tfevents.1768954386.2-20
lightning_logs/version_17/: events.out.tfevents.1768954390.2-20
lightning_logs/version_18/: events.out.tfevents.1768954390.2-20
lightning_logs/version_19/: events.out.tfevents.1768954390.2-20
lightning_logs/version_2/: events.out.tfevents.1768794105.2-20
lightning_logs/version_20/: events.out.tfevents.1768961305.2-20
lightning_logs/version_21/: events.out.tfevents.1768961500.2-20
lightning_logs/version_22/: events.out.tfevents.1768961506.2-20
lightning_logs/version_23/: events.out.tfevents.1768961509.2-20
lightning_logs/version_24/: events.out.tfevents.1768961509.2-20  hparams.yaml
lightning_logs/version_25/: events.out.tfevents.1768961509.2-20
(+44 files in other folders)
